Update template constructor
