# docs/web_deploy/openapi.json
@@ -17,8 +17,8 @@
         "tags": [
           "Users"
         ],
-        "summary": "Upload User",
-        "operationId": "uploadUser",
+        "summary": "Create User",
+        "operationId": "createUser",
         "requestBody": {
           "content": {
             "application/json": {
@@ -34,7 +34,7 @@
           }
         },
         "responses": {
-          "200": {
+          "201": {
             "description": "Success",
             "content": {
               "application/json": {
@@ -151,6 +151,10 @@
                       "items": {
                         "$ref": "#/components/schemas/User"
                       }
+                    },
+                    "links": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/Links"
                     }
                   }
                 }
@@ -158,25 +162,7 @@
             }
           },
           "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "required": [
-                    "errors"
-                  ],
-                  "properties": {
-                    "errors": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/Errors"
-                      }
-                    }
-                  }
-                }
-              }
-            }
+            "$ref": "#/components/responses/BadRequestError"
           },
           "404": {
             "$ref": "#/components/responses/NotFound"
@@ -468,6 +454,37 @@
           }
         }
       },
+      "Links": {
+        "description": "Standard JSON:API links",
+        "type": "object",
+        "properties": {
+          "first": {
+            "type": "string",
+            "description": "link on first page",
+            "example": "/users?page[number]=0&page[limit]=15&page[order]=DESC"
+          },
+          "previous": {
+            "type": "string",
+            "description": "link on previous page",
+            "example": "/users?page[number]=1&page[limit]=15&page[order]=DESC"
+          },
+          "self": {
+            "type": "string",
+            "description": "link on self",
+            "example": "/users?page[number]=2&page[limit]=15&page[order]=DESC"
+          },
+          "next": {
+            "type": "string",
+            "description": "link on next page",
+            "example": "/users?page[number]=3&page[limit]=15&page[order]=DESC"
+          },
+          "last": {
+            "type": "string",
+            "description": "link on last page",
+            "example": "/users?page[number]=15&page[limit]=15&page[order]=DESC"
+          }
+        }
+      },
       "UpdateUser": {
         "allOf": [
           {
@@ -586,6 +603,27 @@
       }
     },
     "responses": {
+      "BadRequestError": {
+        "description": "Bad Request Error",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "required": [
+                "errors"
+              ],
+              "properties": {
+                "errors": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Errors"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
       "InternalError": {
         "description": "Internal Server Error",
         "content": {
@@ -658,10 +696,10 @@
         "schema": {
           "type": "string",
           "enum": [
-            "asc",
-            "desc"
+            "ASC",
+            "DESC"
           ],
-          "default": "desc",
+          "default": "DESC",
           "description": "Order of records on the page. If sortingParam is not specified, order of records is by default sorted by ID."
         }
       }
