# resources/models/Links.ts
@@ -1,0 +1,97 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * users-svc
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * Standard JSON:API links
+ * @export
+ * @interface Links
+ */
+export interface Links {
+    /**
+     * link on first page
+     * @type {string}
+     * @memberof Links
+     */
+    first?: string;
+    /**
+     * link on previous page
+     * @type {string}
+     * @memberof Links
+     */
+    previous?: string;
+    /**
+     * link on self
+     * @type {string}
+     * @memberof Links
+     */
+    self?: string;
+    /**
+     * link on next page
+     * @type {string}
+     * @memberof Links
+     */
+    next?: string;
+    /**
+     * link on last page
+     * @type {string}
+     * @memberof Links
+     */
+    last?: string;
+}
+
+/**
+ * Check if a given object implements the Links interface.
+ */
+export function instanceOfLinks(value: object): boolean {
+    let isInstance = true;
+
+    return isInstance;
+}
+
+export function LinksFromJSON(json: any): Links {
+    return LinksFromJSONTyped(json, false);
+}
+
+export function LinksFromJSONTyped(json: any, ignoreDiscriminator: boolean): Links {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'first': !exists(json, 'first') ? undefined : json['first'],
+        'previous': !exists(json, 'previous') ? undefined : json['previous'],
+        'self': !exists(json, 'self') ? undefined : json['self'],
+        'next': !exists(json, 'next') ? undefined : json['next'],
+        'last': !exists(json, 'last') ? undefined : json['last'],
+    };
+}
+
+export function LinksToJSON(value?: Links | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'first': value.first,
+        'previous': value.previous,
+        'self': value.self,
+        'next': value.next,
+        'last': value.last,
+    };
+}
+
