# resources/models/ObjectSerializer.ts
@@ -1,287 +1,0 @@
-export * from '../models/CreateUser';
-export * from '../models/CreateUserAllOf';
-export * from '../models/CreateUserAllOfAttributes';
-export * from '../models/CreateUserKey';
-export * from '../models/Errors';
-export * from '../models/ErrorsErrorsInner';
-export * from '../models/GetUsersList200Response';
-export * from '../models/GetUsersList400Response';
-export * from '../models/UpdateUser';
-export * from '../models/UpdateUserAllOf';
-export * from '../models/UpdateUserAllOfAttributes';
-export * from '../models/UpdateUserKey';
-export * from '../models/UploadUser200Response';
-export * from '../models/UploadUserRequest';
-export * from '../models/User';
-export * from '../models/UserAllOf';
-export * from '../models/UserAllOfAttributes';
-export * from '../models/UserKey';
-
-import { CreateUser, CreateUserTypeEnum     } from '../models/CreateUser';
-import { CreateUserAllOf } from '../models/CreateUserAllOf';
-import { CreateUserAllOfAttributes } from '../models/CreateUserAllOfAttributes';
-import { CreateUserKey, CreateUserKeyTypeEnum    } from '../models/CreateUserKey';
-import { Errors } from '../models/Errors';
-import { ErrorsErrorsInner  , ErrorsErrorsInnerStatusEnum   } from '../models/ErrorsErrorsInner';
-import { GetUsersList200Response } from '../models/GetUsersList200Response';
-import { GetUsersList400Response } from '../models/GetUsersList400Response';
-import { UpdateUser, UpdateUserTypeEnum     } from '../models/UpdateUser';
-import { UpdateUserAllOf } from '../models/UpdateUserAllOf';
-import { UpdateUserAllOfAttributes } from '../models/UpdateUserAllOfAttributes';
-import { UpdateUserKey, UpdateUserKeyTypeEnum    } from '../models/UpdateUserKey';
-import { UploadUser200Response } from '../models/UploadUser200Response';
-import { UploadUserRequest } from '../models/UploadUserRequest';
-import { User, UserTypeEnum     } from '../models/User';
-import { UserAllOf } from '../models/UserAllOf';
-import { UserAllOfAttributes } from '../models/UserAllOfAttributes';
-import { UserKey, UserKeyTypeEnum    } from '../models/UserKey';
-
-/* tslint:disable:no-unused-variable */
-let primitives = [
-                    "string",
-                    "boolean",
-                    "double",
-                    "integer",
-                    "long",
-                    "float",
-                    "number",
-                    "any"
-                 ];
-
-const supportedMediaTypes: { [mediaType: string]: number } = {
-  "application/json": Infinity,
-  "application/octet-stream": 0,
-  "application/x-www-form-urlencoded": 0
-}
-
-
-let enumsMap: Set<string> = new Set<string>([
-    "CreateUserTypeEnum",
-    "CreateUserKeyTypeEnum",
-    "ErrorsErrorsInnerStatusEnum",
-    "UpdateUserTypeEnum",
-    "UpdateUserKeyTypeEnum",
-    "UserTypeEnum",
-    "UserKeyTypeEnum",
-]);
-
-let typeMap: {[index: string]: any} = {
-    "CreateUser": CreateUser,
-    "CreateUserAllOf": CreateUserAllOf,
-    "CreateUserAllOfAttributes": CreateUserAllOfAttributes,
-    "CreateUserKey": CreateUserKey,
-    "Errors": Errors,
-    "ErrorsErrorsInner": ErrorsErrorsInner,
-    "GetUsersList200Response": GetUsersList200Response,
-    "GetUsersList400Response": GetUsersList400Response,
-    "UpdateUser": UpdateUser,
-    "UpdateUserAllOf": UpdateUserAllOf,
-    "UpdateUserAllOfAttributes": UpdateUserAllOfAttributes,
-    "UpdateUserKey": UpdateUserKey,
-    "UploadUser200Response": UploadUser200Response,
-    "UploadUserRequest": UploadUserRequest,
-    "User": User,
-    "UserAllOf": UserAllOf,
-    "UserAllOfAttributes": UserAllOfAttributes,
-    "UserKey": UserKey,
-}
-
-export class ObjectSerializer {
-    public static findCorrectType(data: any, expectedType: string) {
-        if (data == undefined) {
-            return expectedType;
-        } else if (primitives.indexOf(expectedType.toLowerCase()) !== -1) {
-            return expectedType;
-        } else if (expectedType === "Date") {
-            return expectedType;
-        } else {
-            if (enumsMap.has(expectedType)) {
-                return expectedType;
-            }
-
-            if (!typeMap[expectedType]) {
-                return expectedType; // w/e we don't know the type
-            }
-
-            // Check the discriminator
-            let discriminatorProperty = typeMap[expectedType].discriminator;
-            if (discriminatorProperty == null) {
-                return expectedType; // the type does not have a discriminator. use it.
-            } else {
-                if (data[discriminatorProperty]) {
-                    var discriminatorType = data[discriminatorProperty];
-                    if(typeMap[discriminatorType]){
-                        return discriminatorType; // use the type given in the discriminator
-                    } else {
-                        return expectedType; // discriminator did not map to a type
-                    }
-                } else {
-                    return expectedType; // discriminator was not present (or an empty string)
-                }
-            }
-        }
-    }
-
-    public static serialize(data: any, type: string, format: string) {
-        if (data == undefined) {
-            return data;
-        } else if (primitives.indexOf(type.toLowerCase()) !== -1) {
-            return data;
-        } else if (type.lastIndexOf("Array<", 0) === 0) { // string.startsWith pre es6
-            let subType: string = type.replace("Array<", ""); // Array<Type> => Type>
-            subType = subType.substring(0, subType.length - 1); // Type> => Type
-            let transformedData: any[] = [];
-            for (let date of data) {
-                transformedData.push(ObjectSerializer.serialize(date, subType, format));
-            }
-            return transformedData;
-        } else if (type === "Date") {
-            if (format == "date") {
-                let month = data.getMonth()+1
-                month = month < 10 ? "0" + month.toString() : month.toString()
-                let day = data.getDate();
-                day = day < 10 ? "0" + day.toString() : day.toString();
-
-                return data.getFullYear() + "-" + month + "-" + day;
-            } else {
-                return data.toISOString();
-            }
-        } else {
-            if (enumsMap.has(type)) {
-                return data;
-            }
-            if (!typeMap[type]) { // in case we dont know the type
-                return data;
-            }
-
-            // Get the actual type of this object
-            type = this.findCorrectType(data, type);
-
-            // get the map for the correct type.
-            let attributeTypes = typeMap[type].getAttributeTypeMap();
-            let instance: {[index: string]: any} = {};
-            for (let attributeType of attributeTypes) {
-                instance[attributeType.baseName] = ObjectSerializer.serialize(data[attributeType.name], attributeType.type, attributeType.format);
-            }
-            return instance;
-        }
-    }
-
-    public static deserialize(data: any, type: string, format: string) {
-        // polymorphism may change the actual type.
-        type = ObjectSerializer.findCorrectType(data, type);
-        if (data == undefined) {
-            return data;
-        } else if (primitives.indexOf(type.toLowerCase()) !== -1) {
-            return data;
-        } else if (type.lastIndexOf("Array<", 0) === 0) { // string.startsWith pre es6
-            let subType: string = type.replace("Array<", ""); // Array<Type> => Type>
-            subType = subType.substring(0, subType.length - 1); // Type> => Type
-            let transformedData: any[] = [];
-            for (let date of data) {
-                transformedData.push(ObjectSerializer.deserialize(date, subType, format));
-            }
-            return transformedData;
-        } else if (type === "Date") {
-            return new Date(data);
-        } else {
-            if (enumsMap.has(type)) {// is Enum
-                return data;
-            }
-
-            if (!typeMap[type]) { // dont know the type
-                return data;
-            }
-            let instance = new typeMap[type]();
-            let attributeTypes = typeMap[type].getAttributeTypeMap();
-            for (let attributeType of attributeTypes) {
-                let value = ObjectSerializer.deserialize(data[attributeType.baseName], attributeType.type, attributeType.format);
-                if (value !== undefined) {
-                    instance[attributeType.name] = value;
-                }
-            }
-            return instance;
-        }
-    }
-
-
-    /**
-     * Normalize media type
-     *
-     * We currently do not handle any media types attributes, i.e. anything
-     * after a semicolon. All content is assumed to be UTF-8 compatible.
-     */
-    public static normalizeMediaType(mediaType: string | undefined): string | undefined {
-        if (mediaType === undefined) {
-            return undefined;
-        }
-        return mediaType.split(";")[0].trim().toLowerCase();
-    }
-
-    /**
-     * From a list of possible media types, choose the one we can handle best.
-     *
-     * The order of the given media types does not have any impact on the choice
-     * made.
-     */
-    public static getPreferredMediaType(mediaTypes: Array<string>): string {
-        /** According to OAS 3 we should default to json */
-        if (!mediaTypes) {
-            return "application/json";
-        }
-
-        const normalMediaTypes = mediaTypes.map(this.normalizeMediaType);
-        let selectedMediaType: string | undefined = undefined;
-        let selectedRank: number = -Infinity;
-        for (const mediaType of normalMediaTypes) {
-            if (supportedMediaTypes[mediaType!] > selectedRank) {
-                selectedMediaType = mediaType;
-                selectedRank = supportedMediaTypes[mediaType!];
-            }
-        }
-
-        if (selectedMediaType === undefined) {
-            throw new Error("None of the given media types are supported: " + mediaTypes.join(", "));
-        }
-
-        return selectedMediaType!;
-    }
-
-    /**
-     * Convert data to a string according the given media type
-     */
-    public static stringify(data: any, mediaType: string): string {
-        if (mediaType === "text/plain") {
-            return String(data);
-        }
-
-        if (mediaType === "application/json") {
-            return JSON.stringify(data);
-        }
-
-        throw new Error("The mediaType " + mediaType + " is not supported by ObjectSerializer.stringify.");
-    }
-
-    /**
-     * Parse data from a string according to the given media type
-     */
-    public static parse(rawData: string, mediaType: string | undefined) {
-        if (mediaType === undefined) {
-            throw new Error("Cannot parse content. No Content-Type defined.");
-        }
-
-        if (mediaType === "text/plain") {
-            return rawData;
-        }
-
-        if (mediaType === "application/json") {
-            return JSON.parse(rawData);
-        }
-
-        if (mediaType === "text/html") {
-            return rawData;
-        }
-
-        throw new Error("The mediaType " + mediaType + " is not supported by ObjectSerializer.parse.");
-    }
-}
